fix: home page group overflow

--- a/styles/map.module.scss
+++ b/styles/map.module.scss
@@ -1,5 +1,5 @@
 .map {
-  height: 50vh;
+  height: 50%;
   width: 100vw;
   text-align: center;
   line-height: 50vh;
